package com.ejemplo.tramitacion.dominio.saga.general;

public enum EstadoSaga { INICIADA, EN_CURSO, COMPLETADA, CANCELADA }
