package com.ejemplo.tramitacion.dominio.saga.paso2;

/** Referencia que produce el PASO2 al completarse. */
public record RefPaso2(String valor) {}
