@startuml 14-clases-dominio
title Capa de dominio (business.ordermanager.dominio): base Saga<P> y los 4 agregados
!pragma layout smetana
hide empty members
skinparam classAttributeIconSize 0

package "dominio.comun (shared kernel)" {

  abstract class "Saga<P extends Enum<P> & PasoSaga>" as Saga {
    #id : SagaId  «@Identity»
    #externalId : ExternalId
    #pasos : EnumMap<P, EjecucionPaso<P>>
    #auditoria : List<AuditoriaIntervencion>
    #reintentos : PoliticaReintentos
    #estado : EstadoSaga
    #version : long
    +iniciar() : List<Decision<P>>
    +continuar() : List<Decision<P>>
    +completar(paso, resultado) : List<Decision<P>>
    +fallar(paso, motivo) : List<Decision<P>>
    +reintentar(paso) : List<Decision<P>>
    +reanudarPorSoporte(paso, quien) : List<Decision<P>>
    +marcarOkManual(paso, quien, justificacion, datos) : List<Decision<P>>
    +esCancelable() : boolean
    +externalId() : ExternalId
    {abstract} +tipo() : TipoSaga
    {abstract} #pasoInicial() : P
    {abstract} #comandoPara(paso) : ComandoPaso
    {abstract} #aplicarResultado(paso, resultado)
    {abstract} #transicionTras(paso) : List<Decision<P>>
  }
  note right of Saga
    Base abstracta común: NO es un agregado.
    finalizar() = COMPLETADA y nada más:
    no se publica ningún evento.
  end note

  interface PasoSaga {
    +name() : String
    +{static} de(tipo, nombre) : PasoSaga
  }

  class "EjecucionPaso<P>" as EjecucionPaso <<@Entity>> {
    -paso : P
    -estado : EstadoPaso
    -intentos : int
    -ultimoFallo : MotivoFallo
  }

  enum EstadoSaga {
    INICIADA
    EN_CURSO
    COMPLETADA
    CANCELADA
  }
  enum EstadoPaso {
    PENDIENTE
    SOLICITADO
    ESPERANDO_REINTENTO
    BLOQUEADO_SOPORTE
    COMPLETADO
    COMPLETADO_MANUAL
    CANCELADO
    COMPENSADO
  }
  enum TipoSaga {
    PRINCIPAL
    SECUNDARIA1
    SECUNDARIA2
    SECUNDARIA3
  }

  interface "Decision<P>" as Decision <<sealed>> {
    Ejecutar(paso, comando)
    ProgramarReintento(paso, espera, intentoNum)
    AbrirTicketSoporte(sagaId, tipo, paso, motivo, intentos, cancelable)
    Compensar(paso, comando)
    ArrancarSaga(contexto)
  }
  interface ComandoPaso <<marcadora>>
  interface ResultadoPaso <<marcadora>>
  interface ContextoArranque <<sealed>> {
    ArranqueSecundaria1(externalId, refPaso1)
    ArranqueSecundaria2(externalId, refPaso5)
    ArranqueSecundaria3(externalId, refPaso7)
  }

  class PoliticaReintentos {
    +esperaTras(intentosFallidos) : Duration
    +agotado(intentosFallidos) : boolean
  }
  class MotivoFallo <<@ValueObject>> {
    codigo / detalle / esReintentable
  }
  class SagaId <<@ValueObject>>
  class ExternalId <<@ValueObject>> {
    UUID único por tramitación:
    correlaciona las 4 sagas
  }
  class "MensajeId, TicketId, UsuarioSoporte,\nAuditoriaIntervencion,\nRefPaso1 / RefPaso5 / RefPaso7" as VOsComunes <<@ValueObject>>
}

package "dominio.sagaprincipal" {
  class SagaPrincipalRoot <<@AggregateRoot>> {
    -ctx : ContextoTramitacion
    +{static} crear(id, externalId, datos, datoNegocio2)
    +cancelarPorSoporte(quien, motivo)
    +compensacionCompletada(paso)
    +compensacionFallida(paso, motivo)
    +esCancelable() : boolean
  }
  note bottom of SagaPrincipalRoot
    Saga<PasoSagaPrincipal>: PASO1..PASO8 síncronos.
    Punto de no retorno: PASO7 completado.
    Al completar PASO8 emite 3 ArrancarSaga.
  end note
  enum PasoSagaPrincipal {
    PASO1 .. PASO8
  }
  interface ComandoPasoPrincipal <<sealed>> {
    EjecutarPaso1 .. EjecutarPaso8
    CompensarPaso1 / CompensarPaso2
  }
  interface ResultadoPasoPrincipal <<sealed>> {
    ResultadoPaso1 .. ResultadoPaso8
  }
  class ContextoTramitacion <<@Entity>> {
    -datoNegocio3 / datoNegocio2
    -refPaso1 .. refPaso8
  }
  class "RefPaso2/3/4/6/8,\nDatoNegocio2, DatoNegocio3" as RefsPrincipal <<@ValueObject>>
}

package "dominio.sagasecundaria1" {
  class SagaSecundaria1Root <<@AggregateRoot>> {
    -refPaso1 / refInicio / refConfirmacion
    +{static} crear(id, ArranqueSecundaria1)
  }
  enum PasoSagaSecundaria1 {
    INICIO
    CONFIRMACION
  }
  interface ComandoPasoSecundaria1 <<sealed>> {
    Iniciar(externalId, refPaso1)
    Confirmar(refInicio)
  }
  interface ResultadoPasoSecundaria1 <<sealed>> {
    Iniciada(refInicio)
    Confirmada(refConfirmacion)
  }
  class "RefInicio, RefConfirmacion" as Refs1 <<@ValueObject>>
}

package "dominio.sagasecundaria2" {
  class SagaSecundaria2Root <<@AggregateRoot>> {
    -refPaso5 / refRespuesta
    +{static} crear(id, ArranqueSecundaria2)
  }
  note bottom of SagaSecundaria2Root
    Un paso SOLICITUD: llamada REST cuya
    respuesta llega después como evento
    Kafka (puede tardar; timeout 24h).
  end note
  enum PasoSagaSecundaria2 {
    SOLICITUD
  }
  interface ComandoPasoSecundaria2 <<sealed>> {
    Solicitar(externalId, refPaso5)
  }
  interface ResultadoPasoSecundaria2 <<sealed>> {
    Respuesta(refRespuesta)
  }
  class "RefRespuesta" as Refs2 <<@ValueObject>>
}

package "dominio.sagasecundaria3" {
  class SagaSecundaria3Root <<@AggregateRoot>> {
    -refPaso7 / refEjecucion
    +{static} crear(id, ArranqueSecundaria3)
  }
  enum PasoSagaSecundaria3 {
    EJECUCION
  }
  interface ComandoPasoSecundaria3 <<sealed>> {
    Ejecutar(externalId, refPaso7)
  }
  interface ResultadoPasoSecundaria3 <<sealed>> {
    Ejecutada(refEjecucion)
  }
  class "RefEjecucion" as Refs3 <<@ValueObject>>
}

Saga <|-- SagaPrincipalRoot
Saga <|-- SagaSecundaria1Root
Saga <|-- SagaSecundaria2Root
Saga <|-- SagaSecundaria3Root

PasoSaga <|.. PasoSagaPrincipal
PasoSaga <|.. PasoSagaSecundaria1
PasoSaga <|.. PasoSagaSecundaria2
PasoSaga <|.. PasoSagaSecundaria3

ComandoPaso <|-- ComandoPasoPrincipal
ComandoPaso <|-- ComandoPasoSecundaria1
ComandoPaso <|-- ComandoPasoSecundaria2
ComandoPaso <|-- ComandoPasoSecundaria3
ResultadoPaso <|-- ResultadoPasoPrincipal
ResultadoPaso <|-- ResultadoPasoSecundaria1
ResultadoPaso <|-- ResultadoPasoSecundaria2
ResultadoPaso <|-- ResultadoPasoSecundaria3

Saga "1" *-- "n" EjecucionPaso : pasos
Saga *-- PoliticaReintentos
Saga o-- EstadoSaga
EjecucionPaso o-- EstadoPaso
EjecucionPaso o-- MotivoFallo
SagaPrincipalRoot *-- ContextoTramitacion
Saga ..> Decision : emite
SagaPrincipalRoot ..> ContextoArranque : ArrancarSaga

note bottom of ComandoPaso
  Sin module-info (unnamed module) los sealed exigen mismo paquete:
  por eso ComandoPaso/ResultadoPaso son marcadoras en comun y cada
  agregado define su sealed local con exhaustividad por saga.
end note

' Layout (smetana): apilar en columnas las clases sueltas del kernel común
TipoSaga -[hidden]down- EstadoSaga
EstadoSaga -[hidden]down- EstadoPaso
SagaId -[hidden]down- ExternalId
ExternalId -[hidden]down- VOsComunes
PasoSaga -[hidden]down- ComandoPaso
ResultadoPaso -[hidden]down- ContextoArranque
MotivoFallo -[hidden]down- PoliticaReintentos

' Layout: los paquetes de agregados debajo del kernel común
EjecucionPaso -[hidden]down- SagaPrincipalRoot
VOsComunes -[hidden]down- PasoSagaPrincipal
Decision -[hidden]down- SagaSecundaria1Root
ContextoArranque -[hidden]down- SagaSecundaria2Root
PoliticaReintentos -[hidden]down- SagaSecundaria3Root

@enduml
